# two-truths-and-cl-i

./: LICENSE  README.md  Team Agreement.md  client.py  front_end_test.py  main.py  pyproject.toml  requirements.txt  requriments.md
Game/: server_functions.py  two_truths_and_lie.py
tests/: Websocket.py  test_game.py  test_main.py
tests/Game/: server_functions.py
