[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Joseph Nguyen <josephnguyen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
black = "^21.12b0"
fastapi = "^0.70.1"
asyncio = "^3.4.3"
aioconsole = "^0.3.3"
websockets = "^10.1"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
pytest-asyncio = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"